Bug 1111311: Use 32 bits signed for storing CTS in order to properly calculate PTS. r=kentuckyfriedtakahe